--- a/app/views/home/_settings.html.erb
+++ b/app/views/home/_settings.html.erb
@@ -1,3 +1,7 @@
+<head>
+  <%= javascript_include_tag :defaults %>
+</head>
+
 <div class="tab-pane fade
 
 <% if session[:current_tab] == 'settings' %>
@@ -74,7 +78,7 @@ in active
         <td>
           &nbsp
           <%= button_to "Delete Trial", {:controller => :trials,
-          :action => 'destroy', :id => @current_trial.id }, :class=>"btn btn-danger", :method => :delete %>
+          :action => 'destroy', :id => @current_trial.id }, :class=>"btn btn-danger", :confirm => "Are you sure you want to delete this trial?", :method => :delete %>
         </td>
 
       </tr>
@@ -106,8 +110,8 @@ in active
     <legend> Invite CRCs </legend>
       <%= form_tag ("/invite") do%>
         <%= label_tag ("Type CRC name")%>
-        <%= text_field_tag :inviteuser %>
-        <%= submit_tag ('Enter') %>
+        <%= text_field_tag :inviteuser,'', :style => "height:30px" %>
+        <%= submit_tag ('Invite'), :class => "btn btn-success" %>
       <%end%>
   </div>
 
