--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -170,7 +170,7 @@
                         </p>
                         <ul class="nav">
                             <li><a href="#about">About</a></li>
-                            <li><a href="#contact">Contact</a></li>
+                            <li><a href="#contact">FAQ</a></li>
                             <li> <%=link_to("Logout", splashes_path) %> </li>
                         </ul>
                     </div><!--/.nav-collapse -->
