--- a/app/views/home/_settings.html.erb
+++ b/app/views/home/_settings.html.erb
@@ -69,7 +69,7 @@ in active
       <table>
       <tr>
         <td>
-          <%= trial.submit "Update", :class=>"btn btn-success"%> 
+          <%= trial.submit "Update", {:class => "btn btn-success", :onclick => "return confirm('Are you sure you want to update settings?')", :remote => true}%> 
         </td>
     <% end %>
         <td>
@@ -77,8 +77,9 @@ in active
         </td>
         <td>
           &nbsp
-          <%= button_to "Delete Trial", {:controller => :trials,
-          :action => 'destroy', :id => @current_trial.id }, :class=>"btn btn-danger", :confirm => "Are you sure you want to delete this trial?", :method => :delete %>
+          <%= button_to("Delete Trial", {:controller => :trials,
+          :action => 'destroy', :id => @current_trial.id }, {:class => "btn btn-danger", :onclick => "return confirm('Are you sure you want to delete this trial?')", :method => :delete, :remote => true}) %>
+
         </td>
 
       </tr>
