--- a/app/views/home/_settings.html.erb
+++ b/app/views/home/_settings.html.erb
@@ -76,12 +76,17 @@ in active
           &nbsp &nbsp
         </td>
         <td>
+          <% if @current_crcs.length==1 %>
           &nbsp
-          <%= button_to("Delete Trial", {:controller => :trials,
+          <%= button_to("Delete this Trial", {:controller => :trials,
           :action => 'destroy', :id => @current_trial.id }, {:class => "btn btn-danger", :onclick => "return confirm('Are you sure you want to delete this trial?')", :method => :delete, :remote => true}) %>
-
+<% else %> 
+&nbsp
+<%= button_to("Remove me from this Trial", {:controller => :trials,
+          :action => 'destroy', :id => @current_trial.id }, {:class => "btn btn-danger", :onclick => "return confirm('Are you sure you want to remove yourself from this trial?')", :method => :delete, :remote => true}) %>
+<% end %>
         </td>
-
+        
       </tr>
     </table>
 </div>
