--- a/app/views/home/_modal.html.erb
+++ b/app/views/home/_modal.html.erb
@@ -67,13 +67,19 @@
 
 <div class="field">
   <label class="control-label" for="inputEmail">Start Date</label>
-    <%= f.text_field :startDate, :style=>"height:30px" %>
+    <%= f.text_field :startDate, :type => 'text', :style=>"height:30px", :class=>"datepicker", 
+       :value => Date.today.strftime("%m/%d/%Y") %>
   </div>
 
 <div class="field">
   <label class="control-label" for="inputEmail">End Date</label>
-    <%= f.text_field :endDate, :style=>"height:30px" %>
+    <%= f.text_field :endDate, :type => 'text', :style=>"height:30px", :class=>"datepicker", 
+       :value => (Date.today + 1.year).strftime("%m/%d/%Y") %>
   </div>
+
+  <style>
+.datepicker{z-index:1151;}
+</style>
 
 
 
