--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -278,7 +278,7 @@ class = 'active'
         <script src="/assets/bootstrap-datepicker.js"></script>
         <script type="text/javascript">
         $(document).ready(function(){ 
-        $("#datepicker").datepicker()
+        $(".datepicker").datepicker()
         .on('changeDate', function(ev){
         //if (ev.date.valueOf() > endDate.valueOf()){
           //  $('#alert').show().find('strong').text('The start date must be before the end date.');
