--- a/app/views/home/_settings.html.erb
+++ b/app/views/home/_settings.html.erb
@@ -24,12 +24,7 @@ in active
     </div>
   </div>
 
-  <div class="control-group">
-    <label class="control-label" for="inputPassword">Trial ID</label>
-    <div class="controls">
-       <%= trial.number_field :trialID, :type => 'text', :style=>"height:30px"%>
-    </div>
-  </div>
+       <%= trial.hidden_field :trialID %>
 
   <div class="control-group">
     <label class="control-label" for="inputPassword">Start Date</label>
@@ -90,37 +85,35 @@ in active
         
       </tr>
     </table>
+    </fieldset>
+</div>
 </div>
 
 </div>
 
-</div>
+
+    <legend> Collaborators </legend>
+
+      <p>The code to join this trial is: <strong>
+      <%= @current_trial.id %> </strong></p>
 
 
-
-
-      <table class = "table table-hover table-condensed table-bordered table-striped" style = "font-size:14px" id="data_table">
-        <thead>
+<table class="table table-striped table-condensed table-hover">
+  <thead>
           <tr>
-              <th style="text-align: left;">Request to be Included</th>
+              <th style="text-align: left;">On this trial:</th>
+            </tr>
+              <% @current_crcs.each do |crc| %>
+            <tr>
+              <td> <%= crc.username %> </td>
+              <td> <%= crc.email %> </td>
+
+            </tr>
+            <% end %>
           </tr>
 
-        </thread>
+        </thead>
       </table>
-
-
-</fieldset>
-
-  </div>
-
-  <div class "control-group">
-    <legend> Invite CRCs </legend>
-      <%= form_tag ("/invite") do%>
-        <%= label_tag ("Type CRC name")%>
-        <%= text_field_tag :inviteuser,'', :style => "height:30px" %>
-        <%= submit_tag ('Invite'), :class => "btn btn-success" %>
-      <%end%>
-  </div>
 
 </div>
 </div> <!-- end span12 -->
