--- a/app/views/home/_edit_data.html.erb
+++ b/app/views/home/_edit_data.html.erb
@@ -68,7 +68,7 @@ in active
 
                 
                 <% @entries_recentFirst.each do |entry| %>
-                <tr id="entry_<%= entry.id %>">
+                <tr id="entry_<%= entry.id %>" style="display:table-row">
                     <td style="text-align: left;" id="input_at_<%= entry.id %>"><%= entry.input_at.strftime("%m/%d/%Y") %></td>
                     
                     <td id="enrolled_<%= entry.id %>"><%= entry.enrolled %></td>
@@ -81,7 +81,28 @@ in active
                     <td><a href = "#" onclick="javascript:editEntry(<%= entry.id %>)">edit</a>
                       <%= link_to 'Delete', entry_path(entry), :method => :delete, :toDelete => entry.id, :remote=>true, :class=>'delete_post' %></td>
                 </tr> 
-              </div>
+
+                <tr id="entry_form_<%= entry.id %>" style="display:none">
+                   <%= form_for(entry, :remote => true) do |f| %>
+                   <td style="text-align: left;"><b><%= f.text_field :input_at, :type => 'text', :style =>"width:90px; height:30px; margin-bottom:0px; text-align:right", :class=>"datepicker", :value => entry.input_at.strftime("%m/%d/%Y") %></b></td>
+                   
+                    <td ><b><%= f.text_field :enrolled, :type => 'text', :style =>"width:60px; height:30px; margin-bottom:0px; text-align:right",
+              :value => entry.enrolled %></b></td>
+              <td ><b><%= f.text_field :active, :type => 'text', :style =>"width:60px; height:30px; margin-bottom:0px; text-align:right",
+              :value => entry.active %></b></td>
+              <td ><b><%= f.text_field :completed, :type => 'text', :style =>"width:60px; height:30px; margin-bottom:0px; text-align:right",
+              :value => entry.completed %></b></td>
+              <td ><b><%= f.text_field :withdrawn, :type => 'text', :style =>"width:60px; height:30px; margin-bottom:0px; text-align:right",
+              :value => entry.withdrawn %></b></td>
+              <td ><b><%= f.text_field :refused, :type => 'text', :style =>"width:60px; height:30px; margin-bottom:0px; text-align:right",
+              :value => entry.refused %></b></td>
+              <td ><b><%= f.text_field :lost, :type => 'text', :style =>"width:60px; height:30px; margin-bottom:0px; text-align:right",
+              :value => entry.lost %></b></td>
+              <%= f.hidden_field :trial_id, :value => @current_trial.id %>
+              <td><%= f.submit "Update", :class=>"btn btn-success"%></td>
+                <% end %>
+                </tr>
+                <tr style="display:none;"></tr>
                 <% end %> 
                                           
             </table>
@@ -94,21 +115,13 @@ in active
 
         <script type="text/javascript">
             function editEntry(id) {
-            var row = document.getElementById('entry_'.concat(id.toString()));
+            var Oldrow = document.getElementById('entry_'.concat(id.toString()));
+            Oldrow.style.display="none";
 
-            var input_at = document.getElementById('input_at_'.concat(id.toString())).innerHTML;
-            var enrolled = document.getElementById('enrolled_'.concat(id.toString())).innerHTML;
-            var active = document.getElementById('active_'.concat(id.toString())).innerHTML;
-            var completed = document.getElementById('completed_'.concat(id.toString())).innerHTML;
-            var withdrawn = document.getElementById('withdrawn_'.concat(id.toString())).innerHTML;
-            var refused = document.getElementById('refused_'.concat(id.toString())).innerHTML;
-            var lost = document.getElementById('lost_'.concat(id.toString())).innerHTML;
+            var Newrow = document.getElementById('entry_form_'.concat(id.toString()));
+            Newrow.style.display="table-row";
 
-            //var form = '<form accept-charset = "UTF-8" action = "/entries/'.concat(id);
-            //form = form.concat('/edit" method = "post" data-remote="true" > 
-              var form = '<%= form_for @entry2, :remote => true do |f| %><%= f.text_field :enrolled, :type => "text", :style =>"width:60px; height:30px; margin-bottom:0px; text-align:right", :value => @last_entry.enrolled %><%= f.submit "Confirm", :class=>"btn btn-success", :id=>"editEntry"%><% end %>';
             
-            row.innerHTML = form;
             }
 
         </script>
