--- a/app/views/home/_settings.html.erb
+++ b/app/views/home/_settings.html.erb
@@ -76,10 +76,10 @@ in active
           <% if @current_crcs.length==1 %>
           &nbsp
           <%= button_to("Leave Trial", {:controller => :trials,
-          :action => 'destroy', :id => @current_trial.id }, {:class => "btn btn-danger", :onclick => "return confirm('Are you sure you want to delete this trial?')", :method => :delete, :remote => true}) %>
+          :action => 'destroy', :id => @current_trial.id }, {:class => "btn btn-danger", :onclick => "return confirm('Are you sure? If you leave this trial, it will be deleted')", :method => :delete, :remote => true}) %>
 <% else %> 
 &nbsp
-<%= button_to("Remove me from this Trial", {:controller => :trials,
+<%= button_to("Leave Trial", {:controller => :trials,
           :action => 'destroy', :id => @current_trial.id }, {:class => "btn btn-danger", :onclick => "return confirm('Are you sure you want to remove yourself from this trial?')", :method => :delete, :remote => true}) %>
 <% end %>
         </td>
