Got register working! So new users will have a blank page to work with. Also, throwing an error for login works

--- a/app/views/home/_make_graph_data.html.erb
+++ b/app/views/home/_make_graph_data.html.erb
@@ -1,3 +1,4 @@
+ <% if @categories != nil %>
  <% @categories.each do |category| %>
 var <%= category + '_data'%> = new Array();
 
@@ -254,3 +255,4 @@ var <%= category + '_7_data' %> = new google.visualization.DataTable();
 
 
                   <%end %>
+<%end%>
