--- a/app/views/splashes/index.html.erb
+++ b/app/views/splashes/index.html.erb
@@ -39,9 +39,9 @@
                          <ul class="nav pull-right">    
 
                          <li>  	
-                        <%= form_tag ("/login") do%>   
-                        		
+	                        <%= form_tag ("/login") do%>   	
                         </li>
+	
                         <li>
 							<%= text_field_tag :username, '', :style => "height:30px", :placeholder => "User Name", :class => "login" %>
 						</li>
@@ -55,6 +55,13 @@
 								&nbsp &nbsp
 								<%= submit_tag ('Sign In'), :class => "btn btn-primary" %>
 						</li>
+						<ul>
+  							<% if (session[:errormessage] != nil) %>
+    	 						<li> <font color="ff0000"><%= session[:errormessage] %></font></li>
+    							<% session[:errormessage] = nil%>
+  							<% end %>
+						</ul>
+
 						<%end%>
 					</ul>
 			
