--- a/app/views/home/_settings.html.erb
+++ b/app/views/home/_settings.html.erb
@@ -11,6 +11,7 @@ in active
   <div class = "row-fluid">
 
       <fieldset>
+<% if @current_trial != nil %>
     <legend><%= @current_trial.trialName %> &nbsp <small>Last updated on <%= @current_trial.updated_at.strftime("%m/%d/%Y") %></small> </legend>
 
 <div class = "span6">
@@ -41,6 +42,7 @@ in active
        :value => @current_trial.endDate.strftime("%m/%d/%Y") %>
     </div>
   </div>
+
 
   <div class="control-group">
     <label class="control-label" for="inputEmail">Enrolled Goal</label>
@@ -73,6 +75,7 @@ in active
           &nbsp &nbsp
         </td>
         <td>
+        <% if @current_crcs != nil %>
           <% if @current_crcs.length==1 %>
           &nbsp
           <%= button_to("Delete this Trial", {:controller => :trials,
@@ -82,6 +85,7 @@ in active
 <%= button_to("Remove me from this Trial", {:controller => :trials,
           :action => 'destroy', :id => @current_trial.id }, {:class => "btn btn-danger", :onclick => "return confirm('Are you sure you want to remove yourself from this trial?')", :method => :delete, :remote => true}) %>
 <% end %>
+<%end%>
         </td>
         
       </tr>
@@ -95,6 +99,8 @@ in active
 </fieldset>
 </div>  <!-- end row fluid -->
 
+<%end%>
+
 <div class = "row-fluid">
   <div class = "span12">
 
@@ -102,14 +108,16 @@ in active
     <legend> Collaborators </legend>
 
       <p>The code to join this trial is: <strong>
+      <% if @current_trial != nil %>
       <%= @current_trial.id %> </strong></p>
-
+      <%end%>
 
 <table class="table table-striped table-condensed table-hover">
   <thead>
           <tr>
               <th style="text-align: left;">On this trial:</th>
             </tr>
+        <% if @current_crcs != nil %>
               <% @current_crcs.each do |crc| %>
             <tr>
               <td> <%= crc.username %> </td>
@@ -117,6 +125,7 @@ in active
 
             </tr>
             <% end %>
+        <%end%>
           </tr>
 
         </thead>
