--- a/app/views/trials/_form.html.erb
+++ b/app/views/trials/_form.html.erb
@@ -15,11 +15,7 @@
     <%= f.label :trialName %><br />
     <%= f.text_field :trialName,  :style=>"height:30px"%>
   </div>
-  <div class="field">
-    <%= f.label :trialID %><br />
-    <%= f.number_field :trialID, :style=>"height:30px"%>
-  </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :class => "btn btn-primary" %>
   </div>
 <% end %>
