more small improvments

--- a/app/views/home/_settings.html.erb
+++ b/app/views/home/_settings.html.erb
@@ -16,7 +16,7 @@ in active
 
 <div class = "span6">
 
-<%= form_for @current_trial, :html=>{ :class=>"form-horizontal"} do |trial|  %>
+<%= form_for (@current_trial), :html=>{ :class=>"form-horizontal"} do |trial|  %>
  <form class="form-horizontal">
 
   <div class="control-group">
