--- a/app/views/trials/_form.html.erb
+++ b/app/views/trials/_form.html.erb
@@ -12,8 +12,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :trialName %><br />
-    <%= f.text_field :trialName,  :style=>"height:30px"%>
+    Trial Name <%= f.text_field :trialName,  :style=>"height:30px"%>
   </div>
   <div class="actions">
     <%= f.submit :class => "btn btn-primary" %>
