--- a/app/views/trials/new.html.erb
+++ b/app/views/trials/new.html.erb
@@ -1,5 +1,16 @@
-<h1>New trial</h1>
+<head>
+<link href="/assets/bootstrap.css" media="screen" rel="stylesheet" type="text/css" />
+<head>
+<body>
+<div>
+	<br>
+</div>
+<div class = "container-fluid">
+	<div class = "hero-unit">
+		<%= render 'form' %>
 
-<%= render 'form' %>
+		<%= link_to 'Back', :controller => "home", :action =>"index" %>
 
-<%= link_to 'Back', :controller => "home", :action =>"index" %>
+	</div>
+ </div>
+</body>
