--- a/app/views/home/_edit_data.html.erb
+++ b/app/views/home/_edit_data.html.erb
@@ -83,7 +83,7 @@ in active
                     <td id="withdrawn_<%= entry.id %>"><%= entry.withdrawn %></td>
                     <td id="refused_<%= entry.id %>"><%= entry.refused %></td>
                     <td id="lost_<%= entry.id %>"><%= entry.lost %></td>
-                    <% if entry != @entries_recentFirst.last %>
+                    <% if entry != @current_trial.entries.first %>
                     <td><a href = "#" onclick="javascript:editEntry(<%= entry.id %>)">Edit</a>
                       | <%= link_to 'Delete', entry_path(entry), :method => :delete, :toDelete => entry.id, :remote=>true, :class=>'delete_post' %></td>
                       <%else %>
