--- a/app/views/user_mailer/welcome_email.html
+++ b/app/views/user_mailer/welcome_email.html
@@ -4,10 +4,14 @@
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
   </head>
   <body>
-    <h1>Welcome to example.com, <%= @user.username %></h1>
+    <h1>Welcome to TrialTracker, <%= @user.username %>!</h1>
     <p>
-      You have successfully signed up to example.com,
-      your username is: <%= @user.username %>.<br/>
+      You have successfully signed up for an account.
+    </br>
+      Your username is: <%= @user.username %>.
+    </br>
+      Your password is: <%= @user.password %>.  
+    <br/>
     </p>
     <p>
       To login to the site, just follow this link: <%= @url %>.
