--- a/app/views/home/_settings.html.erb
+++ b/app/views/home/_settings.html.erb
@@ -1,7 +1,7 @@
 <head>
   <%= javascript_include_tag :defaults %>
   <style type="text/css">
-    .notice {
+    r {
       color:red;
     }
   </style>
@@ -27,13 +27,15 @@ in active
 
   <div class="control-group">
     <div class = "row-fluid">
-     <% if flash[:nameerror] %>
-        <div class="notice offset2"><%= flash[:nameerror] %></div>
-    <% end %>
     <label class="control-label" for="inputEmail">Trial Name</label>
     <div class="controls">
-       <%= trial.text_field :trialName, :type => 'text', :style=>"height:30px"%>
+       <%= trial.text_field :trialName, :type => 'text', :style=>"height:30px"%> 
+       <% if flash[:nameerror] %>
+        <r><%= flash[:nameerror] %></r>
+      <% end %>
+
     </div> 
+
    </div>
   </div>
 
