--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -177,7 +177,7 @@
                         </p>
                         <ul class="nav">
                             <li><a href="#about">About</a></li>
-                            <li><a href="#contact">FAQ</a></li>
+                            <li><%= link_to("FAQ", faq_path) %></li>
                             <li> <%=link_to("Logout", logout_path) %> </li>
                         </ul>
                     </div><!--/.nav-collapse -->
