fixed width bug on settings page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -167,7 +167,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </a>
-                    <a class="brand" href="#">TrialTracker </a>
+                    <a class="brand" href="/home/index">TrialTracker </a>
                     
                     
 
