--- a/app/views/static/faq.html.erb
+++ b/app/views/static/faq.html.erb
@@ -15,7 +15,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </a>
-                    <a class="brand" href="/">TrialTracker </a>
+                    <a class="brand" href="/home/index">TrialTracker </a>
                     
                     
 
