trying to fix registration

--- a/app/views/static/faq.html.erb
+++ b/app/views/static/faq.html.erb
@@ -41,12 +41,22 @@
    	  <div class = "hero-unit">
 		<legend> Frequently Asked Questions </legend>
 
+
+    <em>How can I create a new trial?</em><p></p>
+    <small> To create a new trial, click the green "New Trial" button on the left hand side of the page. Then enter the a trial name (more information is optional). Then click "Create Trial". </small>
+<p></p></br>
+
 		<em>How can I join a trial that someone else has already created?</em><p></p>
 		<small>You must contact the trial-owner and ask them to invite you. When they do, you will receive an email with a link to join the trial.</small>
 <p></p></br>
 		<em>What happens when my data is updated twice on the same day?</em><p></p>
 		<small>There can only ever be one entry (one row) per day. So when more than one update comes during the same day, the last update takes precedence.</small>
 		<p></p></br>
+
+      <em>How do I change the settings of my Trial?</em><p></p>
+    <small> Click on the "Settings" tab. From there, you can edit the Trial's name, goals, and dates. You can also leave the trial. </small>
+    <p></p></br>
+
 		<em>How is the 'projected' line calculated?</em><p></p>
 		<small>First, we take the most recent total for that category and divide it by the number of days the trial has been going on. This gives us your average number of subjects logged per day. Then we draw the line by simply adding that number to your total every day until your trial's end date.</small>
 		<p></p></br>
