--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -178,6 +178,7 @@
                         <ul class="nav">
                             <li><a href="#about">About</a></li>
                             <li><%= link_to("FAQ", faq_path) %></li>
+                            <li><%= link_to("Directory", directory_path) %></li>
                             <li> <%=link_to("Logout", logout_path) %> </li>
                         </ul>
                     </div><!--/.nav-collapse -->
