--- a/app/views/home/_settings.html.erb
+++ b/app/views/home/_settings.html.erb
@@ -80,7 +80,11 @@ in active
       <table>
       <tr>
         <td>
+          <% if @user.id == @current_trial.owner %>
           <%= trial.submit "Update", {:class => "btn btn-success", :onclick => "return confirm('Are you sure you want to update settings?')", :remote => true}%> 
+          <% else %>
+          <%= trial.submit "Update", {:class => "btn btn-success", :onclick => "return confirm('Are you sure you want to update settings?')", :disabled => true}%> 
+          <% end %>
         </td>
     <% end %>
         <td>
@@ -88,16 +92,17 @@ in active
         </td>
         <td>
         <% if @current_crcs != nil %>
-          <% if @current_crcs.length==1 %>
+
+          <% if @user.id == @current_trial.owner %>
           &nbsp
           <%= button_to("Leave Trial", {:controller => :trials,
           :action => 'destroy', :id => @current_trial.id }, {:class => "btn btn-danger", :onclick => "return confirm('Are you sure? If you leave this trial, it will be deleted')", :method => :delete, :remote => true}) %>
-<% else %> 
-&nbsp
-<%= button_to("Leave Trial", {:controller => :trials,
-          :action => 'destroy', :id => @current_trial.id }, {:class => "btn btn-danger", :onclick => "return confirm('Are you sure you want to remove yourself from this trial?')", :method => :delete, :remote => true}) %>
-<% end %>
-<%end%>
+          <% else %> 
+          &nbsp
+          <%= button_to("Leave Trial", {:controller => :trials,
+                    :action => 'destroy', :id => @current_trial.id }, {:class => "btn btn-danger", :onclick => "return confirm('Are you sure you want to remove yourself from this trial?')", :method => :delete, :remote => true}) %>
+          <% end %>
+      <%end%>
         </td>
         
       </tr>
@@ -117,11 +122,21 @@ in active
 
 
     <legend> Collaborators </legend>
-
-      <p>The code to join this trial is: <strong>
-      <% if @current_trial != nil %>
-      <%= @current_trial.id %> </strong></p>
-      <%end%>
+    <div class = "row-fluid">
+      <div class = "span4">
+          <p>The code to join this trial is: <strong>
+          <% if @current_trial != nil %>
+          <%= @current_trial.id %> </strong></p>
+          <%end%>
+    </div>
+    <div class = "span4 offset1">
+          <p> Invite someone! <p>
+          <%= form_tag ("/invite") do%>   
+          <%= text_field_tag :email, '', :style => "height:30px", :placeholder => "Their email address" %>
+          <%= submit_tag ('Invite!'), :class => "btn btn-primary" %>
+          <%end%>
+      </div>
+    </div>
 
 <table class="table table-striped table-condensed table-hover">
   <thead>
