--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,22 +1,20 @@
-<h1>Listing users</h1>
+<h1>Listing CRC's</h1>
 
 <table>
   <tr>
-    <th></th>
-    <th></th>
-    <th></th>
+    <th>Name</th>
+      <td> &nbsp </td>
+    <th>Email</th>
   </tr>
 
 <% @users.each do |user| %>
   <tr>
   	<td> <%= user.username %> </td>
-    <td><%= link_to 'Show', user %></td>
-    <td><%= link_to 'Edit', edit_user_path(user) %></td>
-    <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td> &nbsp </td>
+    <td> <%= user.email %> </td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New User', new_user_path %>
