--- a/app/views/splashes/index.html.erb
+++ b/app/views/splashes/index.html.erb
@@ -49,7 +49,7 @@
                         </li>
 	
                         <li>
-							<%= text_field_tag :username, '', :style => "height:30px", :placeholder => "User Name", :class => "login" %>
+							<%= text_field_tag :email, '', :style => "height:30px", :placeholder => "Email", :class => "login" %>
 						</li>
 						<li>
 						&nbsp &nbsp
