--- a/app/views/user_mailer/welcome_email.html
+++ b/app/views/user_mailer/welcome_email.html
@@ -14,7 +14,7 @@
     <br/>
     </p>
     <p>
-      To login to the site, just follow this link: <%= @url %>.
+      To validate your account and login to the site, just follow this link: <%= @url %>.
     </p>
     <p>Thanks for joining and have a great day!</p>
   </body>
