--- a/app/views/splashes/index.html.erb
+++ b/app/views/splashes/index.html.erb
@@ -37,10 +37,6 @@
                         </ul>
                      
                          <ul class="nav pull-right">   
-  							<% if (session[:errormessage] != nil) %>
-    	 						<li style = "margin-top:10px;"> <font color="ff0000"><%= session[:errormessage] %></font></li>
-    							<% session[:errormessage] = nil%>
-  							<% end %>
   						<li>
   							&nbsp &nbsp
   						</li>
@@ -119,7 +115,14 @@
 				/*-ms-filter must come before filter*/
 				filter: alpha(opacity = 90);padding-top: 30px; padding-left: 30px; padding-right: 30px; padding-bottom: 50px; background-color:#FFF"><h3 style="
 				margin-bottom: 10px;
-				">New to TrialTracker?<br><span style="font-size: 26px;">Sign up!</span></h3>
+				">
+				<% if flash[:errormessage] %>
+				<div class="alert">
+  					<button type="button" class="close" data-dismiss="alert">&times;</button><%= flash[:errormessage] %>
+				</div>
+    							<% flash[:errormessage] = nil%>
+  							<% end %>
+				New to TrialTracker?<br><span style="font-size: 26px;">Sign up!</span></h3>
 						<%= form_tag ("/register") do %>
 						<table>
 						<tr>
