--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -176,7 +176,7 @@
                         Logged in as <a href="#" class="navbar-link"><%= session[:username] %></a>
                         </p>
                         <ul class="nav">
-                            <li><a href="#about">About</a></li>
+                            <li> <%= link_to("About", about_path) %></li>
                             <li><%= link_to("FAQ", faq_path) %></li>
                             <li><%= link_to("Directory", directory_path) %></li>
                             <li> <%=link_to("Logout", logout_path) %> </li>
