--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -20,6 +20,9 @@
                                 #data_table th, #data_table td {
                                   text-align: right;
                                 }
+                                .no-margin {
+                                  margin: 0px;
+                                }
                                 </style>
                             <link href="assets/bootstrap-responsive.css" rel="stylesheet">
                                 
@@ -206,7 +209,7 @@
                             <%= render 'trials/index' %>
                             
                             <li class="nav-header">Add or join more Trials</li>
-                            <a href="#addTrialModal" role="button" class="btn btn-success" data-toggle="modal">New Trial</a>
+                            <a href="#addTrialModal" role="button" class="btn btn-success" data-toggle="modal">Add Trial</a>
                         </ul>
                     </div><!--/.well -->
                 </div><!--/span-->
