--- a/app/views/static/faq.html.erb
+++ b/app/views/static/faq.html.erb
@@ -43,7 +43,7 @@
 
 
     <em>How can I create a new trial?</em><p></p>
-    <small> To create a new trial, click the green "New Trial" button on the left hand side of the page. Then enter the a trial name (more information is optional). Then click "Create Trial". </small>
+    <small> To create a new trial, click the green "Add Trial" button on the left hand side of the page. Then enter the trial's name (more information is optional) and click "Create Trial". </small>
 <p></p></br>
 
 		<em>How can I join a trial that someone else has already created?</em><p></p>
